--- a/skeleton/manifests/install.pp.erb
+++ b/skeleton/manifests/install.pp.erb
@@ -2,9 +2,13 @@
 #
 # This class is called from <%= metadata.name %> for install.
 #
-class <%= metadata.name %>::install {
+class <%= metadata.name %>::install(
+  $version
+) {
 
-  package { $::<%= metadata.name %>::package_name:
-    ensure => present,
+  include ::<%= metadata.name %>::params
+  package{$::<%= metadata.name %>::params::package_name:
+    ensure => $version,
   }
+
 }
