--- a/skeleton/manifests/params.pp.erb
+++ b/skeleton/manifests/params.pp.erb
@@ -1,17 +1,22 @@
 # == Class <%= metadata.name %>::params
 #
 # This class is meant to be called from <%= metadata.name %>
-# It sets variables according to platform
+# It sets various defaults for this module, and also
+# sets variables according to platform
 #
-class <%= metadata.name %>::params {
+class <%= metadata.name %>::params{
+  # these variables are surfaced as parameters in init.pp and may be over-ridden
+  $package_ensure = 'installed'
+  $listen_port     = 2222
+
+  # these variables are purely internal
   case $::osfamily {
-    'Debian': {
-      $package_name = '<%= metadata.name %>'
-      $service_name = '<%= metadata.name %>'
-    }
     'RedHat', 'Amazon': {
-      $package_name = '<%= metadata.name %>'
-      $service_name = '<%= metadata.name %>'
+      $package_name       = '<%= metadata.name %>'
+      $config_file        = '/etc/<%= metadata.name %>.conf'
+      $service_name       = '<%= metadata.name %>'
+      $service_hasstatus  = true
+      $service_hasrestart = true
     }
     default: {
       fail("${::operatingsystem} not supported")
