--- a/skeleton/manifests/service.pp.erb
+++ b/skeleton/manifests/service.pp.erb
@@ -1,14 +1,19 @@
 # == Class <%= metadata.name %>::service
 #
 # This class is meant to be called from <%= metadata.name %>
-# It ensure the service is running
+# It ensures the service is in the desired state
 #
-class <%= metadata.name %>::service {
+class <%= metadata.name %>::service(
+  $enable,
+  $ensure,
+) {
 
-  service { $<%= metadata.name %>::service_name:
-    ensure     => running,
-    enable     => true,
-    hasstatus  => true,
-    hasrestart => true,
+  include ::<%= metadata.name %>::params
+  service{$::<%= metadata.name %>::params::service_name:
+    ensure => $ensure,
+    enable => $enable,
+    hasstatus => $::<%= metadata.name %>::params::service_hasstatus,
+    hasrestart => $::<%= metadata.name %>::params::service_hasrestart,
   }
+
 }
