--- a/skeleton/spec/classes/init_spec.rb.erb
+++ b/skeleton/spec/classes/init_spec.rb.erb
@@ -32,9 +32,9 @@ describe '<%= metadata.name %>' do
       describe "<%= metadata.name %> class with all parameters on #{os[:operatingsystem]} #{os[:operatingsystemrelease]}" do
         let(:params) {
           {
-            param1 => 'one',
-            param2 => 'two',
-            param3 => 'three'
+            'param1' => 'one',
+            'param2' => 'two',
+            'param3' => 'three'
           }
         }
 
