--- a/skeleton/manifests/config.pp.erb
+++ b/skeleton/manifests/config.pp.erb
@@ -1,4 +1,4 @@
-# == Class <%= metadata.name %>::config
+# == Class: <%= metadata.name %>::config
 #
 # This class is called from <%= metadata.name %> for service config.
 #
