--- a/skeleton/manifests/install.pp.erb
+++ b/skeleton/manifests/install.pp.erb
@@ -3,12 +3,12 @@
 # This class is called from <%= metadata.name %> for install.
 #
 class <%= metadata.name %>::install(
-  $version
+  $package_ensure
 ) {
 
   include ::<%= metadata.name %>::params
   package{$::<%= metadata.name %>::params::package_name:
-    ensure => $version,
+    ensure => $package_ensure,
   }
 
 }
