Change a few things to suit my own opinionated self

--- a/skeleton/manifests/config.pp.erb
+++ b/skeleton/manifests/config.pp.erb
@@ -3,4 +3,10 @@
 # This class is called from <%= metadata.name %> for service config.
 #
 class <%= metadata.name %>::config {
+
+  assert_private()
+
+  $some_param = $::<%= metadata.name %>::some_param
+  $some_param_with_default_value = $::<%= metadata.name %>::some_param_with_default_value
+
 }
