--- a/skeleton/spec/acceptance/class_spec.rb.erb
+++ b/skeleton/spec/acceptance/class_spec.rb.erb
@@ -5,7 +5,9 @@ describe '<%= metadata.name %> class' do
     # Using puppet_apply as a helper
     it 'should work idempotently with no errors' do
       pp = <<-EOS
-      class { '<%= metadata.name %>': }
+      class { '<%= metadata.name %>':
+        some_param => 'foo',
+      }
       EOS
 
       # Run it twice and test for idempotency
